force-app/main/default/objects/Policy_Lawyer_History__c/Policy_Lawyer_History__c.object-meta.xml
<CustomObject>
    <label>Policy Lawyer History</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Policy Lawyer History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Lawyer History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>