force-app/main/default/objects/Policy_Lawyer_History__c/fields/Policy_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Policy_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Lawyer</label>
    <referenceTo>Policy_Lawyer__c</referenceTo>
    <relationshipLabel>Policy Lawyer History</relationshipLabel>
    <relationshipName>Policy_Lawyer_History</relationshipName>
    <type>Lookup</type>
</CustomField>